// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Actualizar Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "24-08-2021",
      "hora": "10:30",
      "id": 1629852885387,
      "mascota": "Alfonse",
      "propietario": "Juan",
      "sintomas": "No come",
      "telefono": "123456",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "24-08-2021",
      "hora": "10:30",
      "id": 1629852885387,
      "mascota": "Levi",
      "propietario": "Juan",
      "sintomas": "No come",
      "telefono": "123456",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": Array [],
}
`;
